--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "gulp-if": "^3.0.0",
+    "gulp-less": "^4.0.1",
     "gulp-minify": "^3.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "install": "^0.13.0",
+    "less": "^3.11.1",
     "normalize.css": "^8.0.1",
     "rsync": "^0.6.1",
     "uglify-js": "^3.9.2"
